--- a/guestbook-go/guestbook-controller.yaml
+++ b/guestbook-go/guestbook-controller.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
       - name: guestbook
-        image: registry.k8s.io/guestbook:v3
+        image: liuedy/k8s-guestbook-go-v3:v3
         ports:
         - name: http-server
           containerPort: 3000
